--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="caption two d-table">
                         <div class="d-table-cell align-middle">
                             <h1 class="mb-3">Karunya Hacks </h1>
-                            <h4 class="text-dark font-open-sans">KarunyaHacks is a student hacking community that is affilated to Karunya Institute of Technology and Sciences.</h4>
+                            <h4 class="text-dark font-open-sans">KarunyaHacks is a student hacking community that is affilated to Karunya Institute of Technology and Sciences. <br/><br/>Students take up challenges to solve day-to-day problems in the main thrust areas- Water, Food, Health and Energy through scientific innovation and technological research. </h4>
                             <div class="caption-btns v2">
                                 <a class="bg" href>About  Us</a><!-- <a class="popup-video" href="https://www.youtube.com/watch?v=iaj8ktgL3BY&t=5s"><i class="icofont-ui-play"></i> Play video</a> -->
                             </div>
@@ -119,9 +119,9 @@
                 <div class="col-md-6">
                     <div class="about-cont">
                         <h5>About Karunya Hacks</h5>
-                        <h2>Conducting Events and Hackathons.</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae ut asperiores ea maiores impedit iusto delectus expedita quisquam recusandae, quo eligendi eius doloremque. Facere omnis possimus quaerat libero voluptate et voluptatum iure molestiae? Iure, quos.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, omnis? Libero excepturi earum explicabo itaque at doloremque quam repellendus natus fugit illo molestias pariatur unde repudiandae consequatur, ea ullam facere. Beatae, quidem possimus!</p>
+                        <h2>An Innovative Space!</h2>
+                        <p>It’s a safe space for students to grow, learn and build their skills to grab opportunities and reach career heights.We conduct informative, interactive events and hackathons around the working year, which nthe capabilities of students in our community.</p>
+                        <p>All hackathons come fully packed with an exhaustive list of out-of-the-box events which drive the students to participate enthusiastically and win certificates from our sponsors and attractive prizes.Students from all years irrespective of their interest areas are always welcomed with open arms.</p>
                     </div>
 <!--                     <div class="about-info row">
                         <div class="col-md-6 col-6">
@@ -168,7 +168,7 @@
                     <div class="section-heading text-center">
                         <h5>an exhaustive thriving list of</h5>
                         <h2>Awesome Events</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur ipsam fuga doloribus enim voluptatibus voluptates ab quidem quod natus saepe! Lorem ipsum dolor sit amet.</p>
+                        <p>Here’s a few of the exciting events students can took part in . And if you haven’t yet seen an area you want to learn in. No worries! Contact us and you might be surprised by a few weeks time!</p>
                     </div>
                 </div>
                 <!--end section heading-->
@@ -210,7 +210,7 @@
                                 <img src="images/icon-user-1.png" class="img-fluid" alt>
                             </div>
                             <h3>Docker</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam laborum impedit, sapiente unde dolorum magnam quos quasi illo incidunt corrupti enim, sequi, iste nihil! </p>
+                            <p>During this workshop students were taught the basics of Docker and Software Containers. The workshop covered setting up Docker, running the first container, creating a basic web application with Python and Docker, and how to push the Docker Image to DockerHub. It was led by our own talented ,hardworking students. </p>
                         </div>
                         <!--end awesome-feat-single-->
                         <!--start awesome-feat-single-->
@@ -219,7 +219,7 @@
                                 <img src="images/icon-like-1.png" class="img-fluid" alt>
                             </div>
                             <h3>Amazon Alexa</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat veritatis ullam nemo, tempore hic consequatur esse repellendus odio architecto magni. Et voluptate facilis fuga! </p>
+                            <p>We have conducted Amazon Alexa workshop in association with the MLH Local Host continuously for the past two years. During this workshop participants will be taught the basics of how to build skills for Amazon Alexa to run on Alexa devices like the Amazon Tap or Echo. Who doesn’t like to play with technology once in a while? </p>
                         </div>
                         <!--end awesome-feat-single-->
                         <!--start awesome-feat-single-->
@@ -228,7 +228,7 @@
                                 <img src="images/icon-user-1.png" class="img-fluid" alt>
                             </div>
                             <h3>Web Development</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ea eius, laboriosam culpa placeat, minus dignissimos recusandae itaque illo repudiandae necessitatibus eum doloremque eaque. </p>
+                            <p>Want to design your own personalized webpage? KHACKS has you covered! Students were taught the basics of web development and were given free reign to work on their creative projects and gained a valuable skill. </p>
                         </div>
                         <!--end awesome-feat-single-->
                         <!--start awesome-feat-single-->
@@ -237,7 +237,7 @@
                                 <img src="images/icon-like-1.png" class="img-fluid" alt>
                             </div>
                             <h3>BlockChain</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio dolore repellendus eveniet reiciendis laudantium iure placeat doloribus perspiciatis, libero neque voluptatum aut, commodi quam?</p>
+                            <p>Blockchain technology is most simply defined as a decentralized, distributed ledger that records the provenance of a digital asset. Students got familiar with this upcoming technology and gained insight and interest in it.</p>
                         </div>
                         <!--end awesome-feat-single-->
                     </div>
@@ -255,7 +255,7 @@
                     <div class="section-heading text-center">
                         <h5>Schedule</h5>
                         <h2>Let’s See Upcoming Events</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error rem expedita accusamus, corporis dignissimos velit illum reprehenderit porro eligendi quam?</p>
+                        <p>Challenge yourself and learn about the upcoming technologies with hands on experience on how to implement them into your projects and solutions.Join us and be the game changer for your generation!</p>
                     </div>
                 </div>
                 <!--end section heading-->
@@ -317,7 +317,7 @@
                     <div class="section-heading text-center">
                         <h5>Be the one to sponsor us</h5>
                         <h2 class="text-white">Be the part of Karunya Hacks</h2>
-                        <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi doloribus unde ipsam maxime voluptate quae omnis ipsum in animi ullam.</p>
+                        <p class="text-light">We provide working labs , skilled students willing to learn more and hardworking participants who are willing to do whatever it takes to reach heights! You’ll be helping shape the next generation of influencers and game changers.</p>
                     </div>
                 </div>
                 <!--end section heading-->
@@ -487,7 +487,7 @@
             <div class="footer-copyright">
                 <div class="row">
                     <div class="col-lg-6 col-md-7">
-                        <p>&copy; 2019 KarunyaHacks | All right reserved.</p>
+                        <p>&copy; 2020 KarunyaHacks | All right reserved.</p>
                     </div>
                     <div class="col-lg-6 col-md-5">
                         <div class="footer-social text-right">
